Amend `.gitignore`s for `.env`, and `.envrc`

--- a/{{ cookiecutter.repo_name }}/.envrc
+++ b/{{ cookiecutter.repo_name }}/.envrc
@@ -1,52 +1,23 @@
-# Environment variables go here, and can be read in by Python using `os.getenv`:
+# Orchestration file to load environment variables from the `.env` and `.secrets` files.
 #
-#   --------------------------------------------------------
+# Only used by systems with `direnv` (https://direnv.net/) installed. Environment
+# variables can be read in by Python using `os.getenv` _without_ using `python-dotenv`:
+#
+#   ------------------------------------------------------------------------------------
 #   import os
 #
 #   # Example variable
 #   EXAMPLE_VARIABLE = os.getenv("EXAMPLE_VARIABLE")
-#   --------------------------------------------------------
+#   ------------------------------------------------------------------------------------
 #
-# To ensure the `sed` command below works correctly, make sure all file paths in environment variables are absolute
-# (recommended), or are relative paths using other environment variables (works for Python users only). Environment
-# variable names are expected to contain letters, numbers or underscores only.
-#
-# DO NOT STORE SECRETS HERE - this file is version-controlled! You should store secrets in a `.secrets` file, which is
-# not version-controlled - this can then be sourced here, using `source_env ".secrets"`.
+# DO NOT STORE SECRETS HERE - this file is version-controlled! You should store secrets
+# in the untracked `.secrets` file. This is loaded here using the `dotenv_if_exists`
+# command.
 
-# Extract the variables to `.env` if required. Note `.env` is NOT version-controlled, so `.secrets` will not be
-# committed
-sed -n 's/^export \(.*\)$/\1/p' .envrc .secrets | sed -e 's?$(pwd)?'"$(pwd)"'?g' | sed -e 's?$\([a-zA-Z0-9_]\{1,\}\)?${\1}?g' > .env
-
-# Add the working directory to `PYTHONPATH`; allows Jupyter notebooks in the `notebooks` folder to import `src`
+# Add the working directory to `PYTHONPATH`; allows Jupyter notebooks in the
+# `notebooks` folder to import `src`
 export PYTHONPATH="$PYTHONPATH:$(pwd)"
 
-# Import secrets from an untracked file `.secrets`
-source_env ".secrets"
-
-# Add environment variables for the `data` directories
-export DIR_DATA=$(pwd)/data
-export DIR_DATA_EXTERNAL=$(pwd)/data/external
-export DIR_DATA_RAW=$(pwd)/data/raw
-export DIR_DATA_INTERIM=$(pwd)/data/interim
-export DIR_DATA_PROCESSED=$(pwd)/data/processed
-
-# Add environment variables for the `docs` directory
-export DIR_DOCS=$(pwd)/docs
-
-# Add environment variables for the `notebooks` directory
-export DIR_NOTEBOOKS=$(pwd)/notebooks
-
-# Add environment variables for the `outputs` directory
-export DIR_OUTPUTS=$(pwd)/outputs
-
-# Add environment variables for the `src` directories
-export DIR_SRC=$(pwd)/src
-export DIR_SRC_MAKE_DATA=$(pwd)/src/make_data
-export DIR_SRC_MAKE_FEATURES=$(pwd)/src/make_features
-export DIR_SRC_MAKE_MODELS=$(pwd)/src/make_models
-export DIR_SRC_MAKE_VISUALISATIONS=$(pwd)/src/make_visualisations
-export DIR_SRC_UTILS=$(pwd)/src/utils
-
-# Add environment variables for the `tests` directory
-export DIR_TESTS=$(pwd)/tests
+# Load the `.env` file, and `.secrets` (if it exists)
+dotenv .env
+dotenv_if_exists .secrets
